2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/AbstractMember.cs,
	  MonoDevelop.Projects.Dom.Serialization/DomTypeProxy.cs,
	  MonoDevelop.Projects.Dom.Serialization/ClassEntry.cs,
	  MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Added optimization for isobsolete.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/AbstractMember.cs: making abstract member
	  virtual.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/AbstractMember.cs: fixing possible
	  IsObsolete issue.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/AbstractMember.cs: fixed bug with interface
	  code completion.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/Modifiers.cs,
	  MonoDevelop.Projects.Dom/AbstractMember.cs: Worked on obsolete
	  detection.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Changed
	  method name

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs,
	  MonoDevelop.Projects.Dom.Serialization/ProjectCodeCompletionDatabase.cs:
	  projects now use their file name as key in the parser service.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs,
	  MonoDevelop.Projects.Dom.Serialization/DatabaseProjectDom.cs: fixed
	  'Bug 427285 - Code Completion: Referenced projects not always shown
	  in code completion'.

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs,
	  MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Fixed special name method bug.

2008-09-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Dom/CompoundType.cs: Remove file must return